@@ -898,6 +898,14 @@
 
         <div class="wv-overlay">
           <div class="wv-overlay-bottomleft wvPrintExclude">
+            <button class="btn btn-primary" @click="Download()"
+                    data-toggle="tooltip" data-title="Download">
+              <i class="fa fa-download"></i>
+            </button>
+            <button class="btn btn-primary" @click="Print()"
+                    data-toggle="tooltip" data-title="Print">
+              <i class="fa fa-print"></i>
+            </button>
             <button class="btn btn-primary" @click="FitWidth()"
                     data-toggle="tooltip" data-title="Fit page width">
               <i class="fas fa-text-width"></i>
@@ -922,10 +930,6 @@
             <button class="btn btn-primary" @click="NextPage()"
                     data-toggle="tooltip" data-title="Show next page">
               <i class="fa fa-chevron-circle-right"></i>
-            </button>
-            <button class="btn btn-primary" @click="Print()"
-                    data-toggle="tooltip" data-title="Print">
-              <i class="fa fa-print"></i>
             </button>
           </div>
         </div>
