@@ -3,6 +3,8 @@ Pending changes in the mainline
 
 * Remember the previous layout when re-opening the viewer.
 * Added a Print button in the PDF viewer toolbar.
+* Added a Download button in the PDF viewer toolbar.
+ 
 
 Version 2.6 (2024-08-31)
 ========================
